# rviz_cinematographer

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  package.xml  rosinstall
bhattacharyya_visualization/: CMakeLists.txt  package.xml
bhattacharyya_visualization/include/bhattacharyya_visualization/: bhattacharyya_visualization.h
bhattacharyya_visualization/include/entropy/: bhattacharyya_visualization.h
bhattacharyya_visualization/launch/: bhattacharyya_visualization.launch  bhattacharyya_visualization.rviz  cost_visualization.launch  cost_visualization.perspective  cost_visualization.rviz
bhattacharyya_visualization/src/: bhattacharyya_visualization.cpp
detection_height_mapper/: CMakeLists.txt  nodelet_plugins.xml  package.xml
detection_height_mapper/include/detection_height_mapper/: point_type.h
detection_height_mapper/launch/: detection_height_mapper_nodelet.launch
detection_height_mapper/msg/: ObjectPosition.msg
detection_height_mapper/src/: detection_height_mapper_node.cpp  detection_height_mapper_nodelet.cpp  height_image.cpp  height_image.h  mapper.cpp  mapper.h
dynamics_mapping/: CMakeLists.txt  nodelet_plugins.xml  package.xml
dynamics_mapping/include/dynamics_mapping/: dynamics_mapper.h
dynamics_mapping/src/: dynamics_mapper.cpp  dynamics_mapping_node.cpp  dynamics_mapping_nodelet.cpp
laser_object_detector/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
laser_object_detector/include/laser_segmentation/: point_type.h
laser_object_detector/launch/: bagfile_nodelet_velodyne_object_detector.launch  human_detection_presentation.launch  nodelet_velodyne_object_detector.launch  object_detector_nodelet.launch  panel_detector_nodelet.launch  presentation.launch  test.launch  toad_detector_nodelet.launch  velodyne_object_detector.launch  wrench_detector_nodelet.launch
laser_object_detector/src/: detector.cpp  detector.h  laser_object_detector_node.cpp  laser_object_detector_nodelet.cpp  laser_segmentation_node.cpp  laser_segmentation_nodelet.cpp  segmenter.cpp  segmenter.h
laser_segmentation/: CMakeLists.txt
laser_segmentation/launch/: human_segmentation_presentation.launch  panel_detector_nodelet.launch  segmentation.launch  small_object_segmentation_presentation.launch
laser_segmentation/src/: laser_segmentation_node.cpp  laser_segmentation_nodelet.cpp  segmenter.cpp  segmenter.h
multi_object_tracking/: CMakeLists.txt  package.xml
multi_object_tracking/include/: RosTools.h  StringTools.h  hungarian.h  hypothesis.h  hypothesis_3D.h  multi_object_hypothesis.h  multi_object_tracker.h  multihypothesistracker.h  multiobjecttracker_algorithm.h
multi_object_tracking/launch/: mbzirc_tracking.launch  mbzirc_tracking_prev.launch  mbzirc_tracking_standalone.launch  multi_object_tracking.launch
multi_object_tracking/msg/: DebugTracking.msg
multi_object_tracking/src/: hungarian.cpp  hypothesis.cpp  hypothesis_3D.cpp  kalman_filter.cpp  mot_publisher.cpp  multi_hypothesis_tracker.cpp  multi_object_hypothesis.cpp  multi_object_tracker.cpp  multi_object_tracking_node.cpp  multihypothesistracker.cpp  multiobjecttracker_algorithm.cpp
object_clustering/: CMakeLists.txt  nodelet_plugins.xml  package.xml
object_clustering/launch/: object_clustering.launch  small_objects_clustering.launch
object_clustering/src/: clusterer.cpp  clusterer.h  object_clustering_node.cpp  object_clustering_nodelet.cpp
object_detection/: CMakeLists.txt  nodelet_plugins.xml  package.xml
object_detection/launch/: object_detection.launch  small_objects_detection.launch
object_detection/msg/: ObjectDetection.msg  ObjectDetections.msg
object_detection/src/: detector.cpp  detector.h  object_detection_node.cpp  object_detection_nodelet.cpp
rqt_pose_interpolator/: CMakeLists.txt  README.md  package.xml  plugin.xml
rqt_pose_interpolator/launch/: pose_interpolator.launch  pose_interpolator.rviz  test.launch  trajectory_editor.launch
rqt_pose_interpolator/src/: interactive_trajectory_control_node.cpp  plugins.cpp  pose_interpolator.cpp  pose_interpolator.ui  trajectory_editor.cpp  trajectory_editor.ui
rqt_pose_interpolator/trajectories/: example_trajectory.yaml
rviz_animated_view_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin_description.xml
rviz_animated_view_controller/launch/: demo.launch  demo.rviz
rviz_animated_view_controller/msg/: CameraMovement.msg  CameraTrajectory.msg
rviz_animated_view_controller/src/: rviz_animated_view_controller.cpp
rviz_cinematographer_gui/: CMakeLists.txt  README.md  package.xml  plugin.xml
rviz_cinematographer_gui/launch/: rviz_cinematographer_gui.launch  rviz_cinematographer_gui.rviz
rviz_cinematographer_gui/src/: plugins.cpp  resource.qrc  rviz_cinematographer_gui.cpp  rviz_cinematographer_gui.ui
rviz_cinematographer_gui/trajectories/: example_trajectory.txt  example_trajectory.yaml
rviz_cinematographer_msgs/: CMakeLists.txt  package.xml
rviz_cinematographer_msgs/msg/: CameraMovement.msg  CameraTrajectory.msg  Finished.msg  Record.msg  RecordFinished.msg  Wait.msg
rviz_cinematographer_msgs/srv/: Record.srv
rviz_cinematographer_view_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin_description.xml
rviz_cinematographer_view_controller/launch/: demo.launch  demo.rviz
rviz_cinematographer_view_controller/src/: rviz_cinematographer_view_controller.cpp
velodyne_object_detector/: CMakeLists.txt  nodelet_plugins.xml  package.xml
velodyne_object_detector/launch/: bagfile_nodelet_velodyne_object_detector.launch  nodelet_velodyne_object_detector.launch  object_detector_nodelet.launch  panel_detector_nodelet.launch  toad_detector_nodelet.launch  velodyne_object_detector.launch  wrench_detector_nodelet.launch
velodyne_object_detector/src/: detector.cpp  detector.h  velodyne_object_detector.cpp  velodyne_object_detector_node.cpp  velodyne_object_detector_nodelet.cpp
video_recorder/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
video_recorder/launch/: video_recorder.launch
video_recorder/src/: video_recorder.cpp
(+52 files in other folders)
