<package format="2">
	<name>bhattacharyya_visualization</name>
	<description>
		Library package for bhattacharyya visualization
	</description>
	<maintainer email="jan.razlaw@gmx.de">Jan Razlaw</maintainer>
	<version>0.0.1</version>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>config_server</depend>
	<depend>visualization_msgs</depend>	
	<depend>pcl_ros</depend>	
	<depend>pcl_conversions</depend>

</package>
