<package format="2">
  <name>laser_segmentation</name>
  <description>Segment objects by width in laser range data</description>
  <version>0.0.1</version>
  <license>BSD</license>
  <maintainer email="jan.razlaw@gmx.de">Jan</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>config_server</depend>
  <depend>nodelet</depend>
  <depend>ais_laser_filters</depend>
  <depend>tf</depend>
  <depend>eigen_conversions</depend>
  <depend>tf_conversions</depend>
  <depend>velodyne_pointcloud</depend>
  <depend>laser_geometry</depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>