<package format="2">

  <name>rqt_pose_interpolator</name>
  <version>0.0.0</version>
  <description>The rqt_pose_interpolator package</description>
  <maintainer email="jan.razlaw@gmx.de">Jan Razlaw</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
  <depend>interactive_markers</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>tf</depend>
  <depend>rviz_cinematographer_msgs</depend>
  <depend>rviz_animated_view_controller</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
  <!-- Other tools can request additional information be placed here -->

</package>
