<package>
	<name>rviz_cinematographer_msgs</name>
	<version>0.0.0</version>
	<description>
		Provides msgs for the rviz cinematographer.
	</description>

	<maintainer email="s6jarazl@uni-bonn.de">Jan Razlaw</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>	
  	
  	<run_depend>message_runtime</run_depend>
  	<run_depend>std_msgs</run_depend>
  	<run_depend>geometry_msgs</run_depend>

</package>
