<package format="2">

  <name>rviz_cinematographer_view_controller</name>
  <version>0.1.1</version>
  <description>An rviz view controller featuring smooth transitions.</description>
  <author email="adamleeper@gmail.com">Adam Leeper</author>
  <author email="s6jarazl@uni-bonn.de">Jan Razlaw</author>
  <maintainer email="s6jarazl@uni-bonn.de">Jan Razlaw</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>rviz</depend>
  <depend>pluginlib</depend>
  <depend>rviz_cinematographer_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
